--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd-companion-client",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "npm run serve",
@@ -14,6 +14,7 @@
     "npm": "6.4.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "uiv": "^0.28.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
