--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server",
+    "db:create": "node server/bin/setup_db",
     "dev": "cd client && npm run build && cd .. && node server",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm run build"
   },
@@ -12,6 +13,7 @@
     "npm": "6.4.1"
   },
   "dependencies": {
+    "@sentry/node": "^4.4.1",
     "bcrypt": "^3.0.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
