--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.41.2",
+    "sparkpost": "^2.1.3",
     "universal-cookie": "^3.0.7",
     "validator": "^10.9.0"
   }
