--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "pusher-js": "^4.3.1",
     "uiv": "^0.28.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
