--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
+    "pusher": "^2.2.0",
     "sequelize": "^4.41.2",
     "sparkpost": "^2.1.3",
     "universal-cookie": "^3.0.7",
