--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server",
     "db:create": "node server/bin/setup_db",
-    "dev": "cd client && npm run build && cd .. && node server",
+    "dev-build": "cd client && npm run build && cd .. && node server",
+    "dev": "concurrently \"npm start\" \"cd client && npm start\" ",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm run build"
   },
   "engines": {
@@ -30,5 +31,8 @@
     "sparkpost": "^2.1.3",
     "universal-cookie": "^3.0.7",
     "validator": "^10.9.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0"
   }
 }
