--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "pusher-js": "^4.3.1",
     "uiv": "^0.28.0",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
