--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "uiv": "^0.28.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-simple-spinner": "^1.2.8",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
