--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "feather-icons": "^4.10.0",
     "lodash": "^4.17.11",
     "pusher-js": "^4.3.1",
     "uiv": "^0.28.0",
