--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server",
     "db:create": "node server/bin/setup_db",
     "dev-build": "cd client && npm run build && cd .. && node server",
-    "dev": "concurrently \"npm start\" \"cd client && npm start\" ",
+    "dev": "concurrently \"npm start\" \"cd client2 && npm start\" ",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm run build"
   },
   "engines": {
