--- a/client2/package.json
+++ b/client2/package.json
@@ -19,8 +19,8 @@
     "lodash": "^4.17.11",
     "pusher-js": "^4.4.0",
     "vue": "^2.6.10",
-    "vue-atlas": "^2.0.13",
     "vue-router": "^3.0.3",
+    "vuetify": "^1.5.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -33,7 +33,6 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "vue-cli-plugin-quasar": "^1.0.0-rc.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
