--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-validator": "^6.3.1",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.13",
