--- a/client/package.json
+++ b/client/package.json
@@ -10,29 +10,31 @@
     "lint": "vue-cli-service lint"
   },
   "engines": {
-    "node": "10.15.3",
-    "npm": "6.9.0"
+    "node": "12.14.1",
+    "npm": "6.13.4"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
-    "lodash": "^4.17.14",
-    "pusher-js": "^4.4.0",
+    "axios": "^0.19.1",
+    "core-js": "^3.4.4",
+    "lodash": "^4.17.15",
+    "pusher-js": "^5.0.3",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.7",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.2",
-    "@vue/cli-plugin-eslint": "^3.9.2",
-    "@vue/cli-service": "^3.9.2",
-    "@vue/eslint-config-airbnb": "^4.0.1",
-    "babel-eslint": "^10.0.2",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-plugin-vuex": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
