--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server",
+    "superclean": "rm -rf node_modules && rm -rf package-lock.json && npm install",
     "lint": "eslint --ext .js server/",
     "lint:fix": "eslint --ext .js server/ --fix",
     "db:create": "node server/bin/setup_db",
@@ -17,7 +18,7 @@
   },
   "dependencies": {
     "@sentry/node": "^4.4.1",
-    "bcrypt": "^3.0.2",
+    "bcrypt": "3.0.6",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
