--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dnd-companion-server",
-  "version": "0.0.1",
+  "name": "dnd-companion-app-server",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node server",
