--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "pusher-js": "^5.0.3",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
+    "vue-popperjs": "^2.3.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
