--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.19.1",
     "core-js": "^3.4.4",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "pusher-js": "^5.0.3",
     "tailwindcss": "^1.1.4",
