--- a/client/package.json
+++ b/client/package.json
@@ -3,41 +3,43 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
-    "superclean": "rm -rf node_modules && rm -rf package-lock.json && npm install",
-    "dev": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "engines": {
-    "node": "12.14.1",
-    "npm": "6.13.4"
+    "lint": "vue-cli-service lint",
+    "dev": "npm run serve",
+    "start": "npm run serve",
+    "clean": "rm -rf node_modules && npm install",
+    "superclean": "rm -rf node_modules && rm -rf package-lock.json && npm install"
   },
   "dependencies": {
-    "axios": "^0.19.1",
-    "core-js": "^3.4.4",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "pusher-js": "^5.0.3",
-    "tailwindcss": "^1.1.4",
+    "tailwindcss": "^1.2.0",
     "vue": "^2.6.10",
     "vue-popperjs": "^2.3.0",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/cli-plugin-babel": "~4.2.2",
+    "@vue/cli-plugin-eslint": "~4.2.2",
+    "@vue/cli-plugin-router": "~4.2.2",
+    "@vue/cli-plugin-vuex": "~4.2.2",
+    "@vue/cli-service": "~4.2.2",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-vue": "^6.1.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
+  },
+  "engines": {
+    "node": "12.15.0",
+    "npm": "6.13.4"
   }
 }
