--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
     "clean": "rm -rf node_modules && npm install",
     "superclean": "rm -rf node_modules && rm -rf package-lock.json && npm install"
   },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
-    "pusher-js": "^5.0.3",
+    "pusher-js": "^5.1.1",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.10",
     "vue-popperjs": "^2.3.0",
@@ -24,6 +28,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@vue/cli-plugin-babel": "~4.2.2",
     "@vue/cli-plugin-eslint": "~4.2.2",
     "@vue/cli-plugin-router": "~4.2.2",
@@ -33,13 +38,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
-  },
-  "engines": {
-    "node": "12.15.0",
-    "npm": "6.13.4"
   }
 }
