--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm run build"
   },
   "engines": {
-    "node": "12.15.0",
+    "node": "12.16.1",
     "npm": "6.13.4"
   },
   "dependencies": {
-    "@sentry/node": "^5.11.0",
-    "bcrypt": "3.0.6",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4",
-    "express-validator": "^6.3.1",
-    "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.13",
-    "morgan": "^1.9.1",
-    "pg": "^7.7.1",
-    "pg-hstore": "^2.3.2",
-    "pusher": "^2.2.0",
-    "sequelize": "^5.21.3",
-    "sparkpost": "^2.1.3",
-    "universal-cookie": "^3.0.7",
-    "validator": "^10.9.0"
+    "@sentry/node": "*",
+    "bcrypt": "*",
+    "cookie-parser": "*",
+    "dotenv": "*",
+    "express": "*",
+    "express-validator": "*",
+    "helmet": "*",
+    "jsonwebtoken": "*",
+    "lodash": "*",
+    "morgan": "*",
+    "pg": "*",
+    "pg-hstore": "*",
+    "pusher": "*",
+    "sequelize": "*",
+    "sparkpost": "*",
+    "universal-cookie": "*",
+    "validator": "*"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1"
+    "concurrently": "*",
+    "eslint": "*",
+    "eslint-config-airbnb-base": "*",
+    "eslint-plugin-import": "*"
   }
 }
