--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.10",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^3.1.5",
+    "vue-select": "^3.4.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
